--- a/.github/workflows/theme-fabu.yml
+++ b/.github/workflows/theme-fabu.yml
@@ -12,7 +12,7 @@ jobs:
       ___X_CMD_GHACTION_X: x2
       GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       GITCODE_TOKEN: ${{ secrets.GITCODE_TOKEN_SYNC }}
-      ssh_key: ${{ secrets.SSH_PRIVATE_KEY }}
+      ssh_key: ${{ secrets.SSH_QIAKAI_KEY }}
       git_user: l
       git_email: l@x-cmd.com
       CONCURRENCY: 10
