--- a/.github/workflows/theme-fabu.yml
+++ b/.github/workflows/theme-fabu.yml
@@ -20,6 +20,8 @@ jobs:
       - name: main
         uses: x-cmd/action@main
         with:
-          code: x ws theme-fabu || true
+          code: |
+            x ws cd-source-code || return
+            xws fabu
 
 
