--- a/.github/workflows/fabu-theme-release.yml
+++ b/.github/workflows/fabu-theme-release.yml
@@ -12,6 +12,7 @@ jobs:
       ___X_CMD_GHACTION_X: x2
       GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       GITCODE_TOKEN: ${{ secrets.GITCODE_TOKEN_SYNC }}
+      QYWX_BOT_RELEASE_WEBHOOK: ${{ secrets.QYWX_BOT_RELEASE_WEBHOOK }}
       ssh_key: ${{ secrets.SSH_QIAKAI_KEY }}
       git_user: l
       git_email: l@x-cmd.com
